# AI-Engineer-Take-Home-Technical-Task

./: Processed_csv.csv  README.md  ReAct_agent.py  Task_1.py  Task_2.py  app.py  main.py  pyproject.toml  requirements.txt
Data/Inputs/: tickets_1.csv  tickets_2.csv
graph_workflow/: Batch_Loader.py  ticket_processor.py
models/: models.py  schema.py
nodes/: Condition_Divider.py  Critic_Node.py  Human_Review_Node.py  LLM_Classifier.py  Response_Node.py  Routing_Node.py  load_tickets.py
prompts/: prompts.py
services/: LLM_service.py
